--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,10 +12,10 @@ parserOptions:
 plugins:
   - jest
 rules: {
-  no-unused-vars: warn
-  jest/no-disabled-tests: warn
-  jest/no-focused-tests: error
-  jest/no-identical-title: error
-  jest/prefer-to-have-length: warn
+  no-unused-vars: warn,
+  jest/no-disabled-tests: warn,
+  jest/no-focused-tests: error,
+  jest/no-identical-title: error,
+  jest/prefer-to-have-length: warn,
   jest/valid-expect: error
 }
